--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #konfigurasi thymeleaf
 spring.thymeleaf.mode=HTML
