notifikasi code reset password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #konfigurasi thymeleaf
 spring.thymeleaf.mode=HTML
+
+#
+spring.kafka.bootstrap-servers=kafka.tazkia.ac.id:9092
+spring.kafka.consumer.group-id=appkpi
+kafka.topic.notifikasi=notification-pXrR9
+
+# Konfigurasi Notifikasi
+notifikasi.registrasi.konfigurasi.it-reset-password=it-reset-password
