revisi app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.mode=HTML
 
 #
 spring.kafka.bootstrap-servers=kafka.tazkia.ac.id:9092
-spring.kafka.consumer.group-id=appkpi
+spring.kafka.consumer.group-id=appauth-server
 kafka.topic.notifikasi=notification-pXrR9
 
 # Konfigurasi Notifikasi
