ganti konfigurasi database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Konfigurasi Koneksi Database
-spring.datasource.url=jdbc:postgresql://localhost/oauthdb_02
+spring.datasource.url=jdbc:postgresql://localhost/oauthdb
 spring.datasource.username=oauthdbuser
 spring.datasource.password=123456
 
